SERVER-4044 -- ctrl-U should delete only text to left of cursor

On ctrl-U in the shell, delete only the text to the left of the
cursor, not the entire line.  We aren't doing cut and paste yet,
this is just deletion.